# another-game-engine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
demo/: CMakeLists.txt  Demo.cpp  Demo.cppm  Demo.hpp  Demo.ixx  main.cpp
editor/: CMakeLists.txt
editor/src/: bindings.cpp
engine/: CMakeLists.txt
engine/include/: Engine.cppm  Engine.ixx  SystemManager.ixx  TypesList.ixx  World.ixx
engine/include/age_engine/: Engine.hpp  SystemManager.hpp  World.hpp
engine/src/: Engine.cpp  Engine.ixx
engine/src/ecs/: Concepts.cppm  SystemManager.cpp  SystemManager.cppm  SystemManager.ixx  World.cpp  World.cppm  World.ixx
engine/src/ecs/systems/: RenderSystem.cpp  RenderSystem.ixx
